--- a/.gitignore
+++ b/.gitignore
@@ -8,5 +8,5 @@
 # Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
 
-# Zložka Visual Studio Code
+# Visual Studio Code Folder
 .vscode
